--- a/css/front-page.css
+++ b/css/front-page.css
@@ -14,13 +14,20 @@
 #front-page img {
     width: 100px;
     height: 100px;
-    margin-bottom: 20px;
 }
 
-#front-page p {
+#front-page .misXV { /* TEXT: MIS XV AÑOS */
+    font-family: "TheSeasons";
+    font-size: 30px;
+    text-align: center; 
+    margin-bottom: 45px;
+}
+
+#front-page .name { /* TEXT: Miriam */
     font-family: "Parisiene";
     font-size: 69px;
     text-align: center; 
+    margin-top: -30px;
 }
 
 
