--- a/css/fonts.css
+++ b/css/fonts.css
@@ -7,3 +7,8 @@
     font-family: "TheSeasons";
     src: url(../fonts/TheSeasons.otf) format(truetype);
 }
+
+@font-face {
+    font-family: "Miama";
+    src: url(../fonts/Miama.otf) format(truetype);
+}
