Parents section added

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 
 
 @import url(front-page.css);
+@import url(parents.css);
 @import url(photo.css);
 @import url(invitation.css);
 @import url(countdown.css);
