attendance section added

--- a/css/song.css
+++ b/css/song.css
@@ -1,7 +1,8 @@
 #song {
-    background: rgb(238,28,236);
-    background: linear-gradient(299deg, rgba(238,28,236,1) 0%, rgba(166,42,65,1) 100%);
+    /*background: rgb(238,28,236);
+    background: linear-gradient(299deg, rgba(238,28,236,1) 0%, rgba(166,42,65,1) 100%);*/
     height: auto;
+    background-color: #D43691;
 }
 
 #song h1 {
