attendance section finished

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 @import url(photo.css);
 @import url(invitation.css);
 @import url(countdown.css);
+@import url(outfit.css);
 @import url(schedule.css);
 @import url(song.css);
 @import url(attendace.css);
