--- a/css/attendace.css
+++ b/css/attendace.css
@@ -4,9 +4,7 @@
     background-position: center;
     background-repeat: no-repeat;
     height: auto;
-
 }
-
 
 #attendance h1 {
     font-family: "TheSeasons";
@@ -14,6 +12,31 @@
     color: rgb(122, 83, 166);
     font-size: 35px;
 }
+
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #c425d3;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: "TheSeasons";
+    margin-top: 60px;
+    margin-bottom: 60px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+}
+
+.button-icon {
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
+}
+
 
 #attendance p {
     font-family: "TheSeasons";
